<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.com.jinzhong.shandonggrain.android.activity.MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@color/bg_head"
        app:title=""
        android:layout_height="?actionBarSize">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="注册"/>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin_20"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/activity_margin_10"
                    android:paddingLeft="@dimen/activity_margin_20"
                    android:paddingTop="@dimen/activity_margin_10">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/register_name" />

                    <EditText
                        android:id="@+id/text_real_name"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/activity_margin_40"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/register_name"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:paddingLeft="@dimen/activity_margin_10"
                        android:paddingRight="@dimen/activity_margin_10"
                        android:textColorHint="@color/text_hint"
                        android:textSize="@dimen/text_size_20" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/activity_margin_20"
                    android:background="@color/line_1px" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_margin_10"
                    android:paddingLeft="@dimen/activity_margin_20"
                    android:paddingTop="@dimen/activity_margin_10">

                    <ImageView
                        android:id="@+id/iv_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/register_id_card" />

                    <EditText
                        android:layout_toRightOf="@id/iv_id"
                        android:id="@+id/text_card"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/activity_margin_40"
                        android:background="@null"
                        android:hint="@string/register_card"
                        android:paddingLeft="@dimen/activity_margin_10"
                        android:textColor="@color/black"
                        android:inputType="number"
                        android:maxLength="18"
                        android:textColorHint="@color/text_hint"
                        android:textSize="@dimen/text_size_20" />

                    <ImageView

                        android:id="@+id/img_upload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:visibility="gone"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/register_upload" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/activity_margin_20"
                    android:background="@color/line_1px" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/activity_margin_10"
                    android:paddingLeft="@dimen/activity_margin_20"
                    android:paddingTop="@dimen/activity_margin_10">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/register_pwd" />

                    <EditText
                        android:id="@+id/text_pwd_1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/activity_margin_40"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/register_pwd"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:paddingLeft="@dimen/activity_margin_10"
                        android:paddingRight="@dimen/activity_margin_10"
                        android:textColorHint="@color/text_hint"
                        android:textSize="@dimen/text_size_20" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/activity_margin_20"
                    android:background="@color/line_1px" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/activity_margin_10"
                    android:paddingLeft="@dimen/activity_margin_20"
                    android:paddingTop="@dimen/activity_margin_10">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/register_pwd_re" />

                    <EditText
                        android:id="@+id/text_pwd_2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/activity_margin_40"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/register_pwd_re"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/activity_margin_10"
                        android:textColor="@color/black"
                        android:paddingRight="@dimen/activity_margin_10"
                        android:textColorHint="@color/text_hint"
                        android:textSize="@dimen/text_size_20" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/activity_margin_20"
                    android:background="@color/line_1px" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/activity_margin_10"
                    android:paddingLeft="@dimen/activity_margin_20"
                    android:paddingTop="@dimen/activity_margin_10">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/register_phone" />

                    <EditText
                        android:id="@+id/text_phone_1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/activity_margin_40"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:hint="@string/register_phone"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:paddingLeft="@dimen/activity_margin_10"
                        android:paddingRight="@dimen/activity_margin_10"
                        android:textColorHint="@color/text_hint"
                        android:textSize="@dimen/text_size_20" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/activity_margin_20"
                    android:background="@color/line_1px" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/activity_margin_10"
                    android:paddingLeft="@dimen/activity_margin_20"
                    android:paddingTop="@dimen/activity_margin_10">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/register_phone_re" />

                    <EditText
                        android:id="@+id/text_phone_2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/activity_margin_40"
                        android:background="@null"
                        android:textColor="@color/black"
                        android:gravity="center_vertical"
                        android:hint="@string/register_phone_re"
                        android:inputType="phone"
                        android:paddingLeft="@dimen/activity_margin_10"
                        android:maxLength="11"
                        android:paddingRight="@dimen/activity_margin_10"
                        android:textColorHint="@color/text_hint"
                        android:textSize="@dimen/text_size_20" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin_40"
                android:background="@color/white">

                <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="match_parent"
                    android:background="@drawable/bt_selector_home"
                    android:layout_height="@dimen/activity_margin_60"
                    android:gravity="center"
                    android:text="立即注册"
                    android:textColor="@color/title_color"
                    android:textSize="@dimen/text_size_20" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
